--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -1,5 +1,7 @@
-h1, h2, h3, h4, h5, h6, ul, body {
-    margin: 0;
-    padding: 0;
+
+.sprite::after {
+    background-image: url(../img/spritesheet.png);
+    background-repeat: no-repeat;
+    display: block;
 }
 
